--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<a class="text-link" target="_blank"
 											href="https://linkedin.com/in/biancacostamelo">
 											<span class="fa-container text-center me-2">
-												<svg class="svg-inline--fa fa-linkedin-in fa-fw" aria-hidden="true"
+												<svg width="32" height="32" class="svg-inline--fa fa-linkedin-in fa-fw" aria-hidden="true"
 													focusable="false" data-prefix="fab" data-icon="linkedin-in"
 													role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
 													data-fa-i2svg="">
