--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<li class="mb-3">
 										<a class="text-link" target="_blank" href="https://github.com/biancacostamelo">
 											<span class="fa-container text-center me-2">
-												<svg class="svg-inline--fa fa-github-alt fa-fw" aria-hidden="true"
+												<svg width="14" height="14"  class="svg-inline--fa fa-github-alt fa-fw" aria-hidden="true"
 													focusable="false" data-prefix="fab" data-icon="github-alt"
 													role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"
 													data-fa-i2svg="">
