--- a/index.html
+++ b/index.html
@@ -61,8 +61,20 @@
 								<ul class="list-unstyled">
 									<li class="mb-2">
 										<a class="text-link" target="_blank" href="mailto:bianca.costamelo1@gmail.com">
-											<i class="far fa-envelope fa-fw me-2 iconmail"
-												data-fa-transform="grow-3"></i>bianca.costamelo1@gmail.com
+											<svg width="16" height="16" class="svg-inline--fa fa-envelope fa-fw me-2 iconmail"
+												data-fa-transform="grow-3" aria-hidden="true" focusable="false"
+												data-prefix="far" data-icon="envelope" role="img"
+												xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
+												data-fa-i2svg="" style="transform-origin: 0.5em 0.5em;">
+												<g transform="translate(256 256)">
+													<g
+														transform="translate(0, 0)  scale(1.1875, 1.1875)  rotate(0 0 0)">
+														<path fill="currentColor"
+															d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"
+															transform="translate(-256 -256)"></path>
+													</g>
+												</g>
+											</svg></i>bianca.costamelo1@gmail.com
 										</a>
 									</li>
 								</ul>
@@ -73,9 +85,10 @@
 										<a class="text-link" target="_blank"
 											href="https://linkedin.com/in/biancacostamelo">
 											<span class="fa-container text-center me-2">
-												<svg width="14" height="14" class="svg-inline--fa fa-linkedin-in fa-fw" aria-hidden="true"
-													focusable="false" data-prefix="fab" data-icon="linkedin-in"
-													role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+												<svg width="16" height="16" class="svg-inline--fa fa-linkedin-in fa-fw"
+													aria-hidden="true" focusable="false" data-prefix="fab"
+													data-icon="linkedin-in" role="img"
+													xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
 													data-fa-i2svg="">
 													<path fill="currentColor"
 														d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
@@ -87,10 +100,10 @@
 									<li class="mb-3">
 										<a class="text-link" target="_blank" href="https://github.com/biancacostamelo">
 											<span class="fa-container text-center me-2">
-												<svg width="14" height="14"  class="svg-inline--fa fa-github-alt fa-fw" aria-hidden="true"
-													focusable="false" data-prefix="fab" data-icon="github-alt"
-													role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"
-													data-fa-i2svg="">
+												<svg width="16" height="16" class="svg-inline--fa fa-github-alt fa-fw"
+													aria-hidden="true" focusable="false" data-prefix="fab"
+													data-icon="github-alt" role="img" xmlns="http://www.w3.org/2000/svg"
+													viewBox="0 0 480 512" data-fa-i2svg="">
 													<path fill="currentColor"
 														d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z">
 													</path>
